delete functionality added in backend and frontendin feedback module
